--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "keywords": [],
     "dependencies": {
-        "keycloakify": "^11.2.0",
+        "keycloakify": "11.2.9-rc.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
